# nextfast-fullstack-nextts-fastapi

./: .gitignore
api/: database.py  main.py  models.py  pyproject.toml  schemas.py
