[project]
name = "api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Foshati", email = "amirrezafoshati@gmail.com"},
]
dependencies = ["fastapi>=0.115.4", "uvicorn>=0.32.0", "sqlalchemy>=2.0.36", "psycopg2>=2.9.10", "pydantic>=2.9.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
